config_files/fruit-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  fruit-deploy-1
  namespace: test
  labels:
    app:  fruit-deploy-1
spec:
  selector:
    matchLabels:
      app: fruit-deploy-1
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  fruit-deploy-1
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  fruit-test-sha256-1
        image:  us-central1-docker.pkg.dev/nimble-album-369317/fruit-app/fruit-image:latest
        imagePullPolicy: IfNotPresent
        # resources:
        #   requests:
        #      cpu: 100m
        ports:
        - containerPort:  80
          name:  fruit-deploy-1
      #   volumeMounts:
      #   - name: localtime
      #     mountPath: /etc/localtime
      # volumes:
      #   - name: localtime
      #     hostPath:
      #       path: /usr/share/zoneinfo/Asia/Shanghai
      restartPolicy: Always
