config_files/fruit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fruit-deploy-1
  namespace: test
spec:
  selector:
    app: fruit-deploy-1
  type: NodePort
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: fruit-deploy-1
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31495
