config_files/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: test
  name: fruit-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "34.170.177.30.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fruit-deploy-1
            port:
              number: 80
